# Lab0

./: README.md  pyproject.toml  pytest.ini
src/: cli.py  preprocessing.py
tests/: test_cli.py  test_logic.py  test_preprocessing.py
