[project]
name = "lab0"
version = "0.1.0"
description = "Fundamentals of Continuous Integration"
dependencies = [
    "click",
    "black",
    "pylint",
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Añadimos esta sección para que Hatchling sepa qué incluir
[tool.hatch.build.targets.wheel]
packages = ["src"]